Finalized adding of torrents via http, file or magnet; also multiple http links at once via ADD_MULTIPLE.

--- a/core/res/layout/activity_rssitems.xml
+++ b/core/res/layout/activity_rssitems.xml
@@ -6,7 +6,7 @@
 	tools:context=".RssItemsActivity" >
 
 	<fragment
-		android:id="@+id/rssfitems_list"
+		android:id="@+id/rssitems_list"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		class="org.transdroid.core.gui.rss.RssitemsFragment_"
