--- a/core/res/menu/fragment_rssfeeds.xml
+++ b/core/res/menu/fragment_rssfeeds.xml
@@ -1,6 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
 	<item
+		android:id="@+id/action_refresh"
+		android:icon="?attr/ic_action_refresh"
+		android:showAsAction="always"
+		android:title="@string/action_refresh"/>
+	
+	<item
 		android:id="@+id/action_settings"
 		android:title="@string/action_settings"/>
 
