Show a light grey line as details fragment divider on the far left.

--- a/core/res/layout/fragment_details.xml
+++ b/core/res/layout/fragment_details.xml
@@ -11,7 +11,8 @@
 		android:divider="@null"
 		android:dividerHeight="0dip"
 		android:listSelector="?attr/selectable_background_transdroid"
-		android:visibility="gone" />
+		android:background="@drawable/details_list_background"
+		android:visibility="visible" />
 
 	<ProgressBar
 		android:id="@+id/loading_progress"
