--- a/core/res/values/colors_transdroid_light.xml
+++ b/core/res/values/colors_transdroid_light.xml
@@ -19,6 +19,7 @@
 
 <resources>
     <color name="pressed_transdroid_light">#CC8ACC12</color>
+   	<color name="divider_grey">#d4d4d4</color>
     <color name="background_light">#fff</color>
     <color name="text_bright_light">#000</color>
     <color name="text_actionbar_light">#000</color>
