Fixed the vertical divider line to display correctly on light and dark themes and only on tablets.

--- a/core/res/layout/fragment_details.xml
+++ b/core/res/layout/fragment_details.xml
@@ -11,8 +11,7 @@
 		android:divider="@null"
 		android:dividerHeight="0dip"
 		android:listSelector="?attr/selectable_background_transdroid"
-		android:background="@drawable/details_list_background"
-		android:visibility="visible" />
+		android:visibility="gone" />
 
 	<ProgressBar
 		android:id="@+id/loading_progress"
