Replaced old merge and sack adapters will leaner, focussed merge and view holder adapter; the latter also correctly manages view visibility by showing and hiding rows.

--- a/core/res/menu/activity_details.xml
+++ b/core/res/menu/activity_details.xml
@@ -4,6 +4,7 @@
 		android:id="@+id/action_refresh"
 		android:icon="?attr/ic_action_refresh"
 		android:showAsAction="always"
-		android:title="@string/action_refresh"/>
+		android:title="@string/action_refresh"
+		android:orderInCategory="100"/>
 
 </menu>
