--- a/core/res/menu/activity_torrents.xml
+++ b/core/res/menu/activity_torrents.xml
@@ -4,7 +4,8 @@
 		android:id="@+id/action_add"
 		android:icon="?attr/ic_action_new"
 		android:showAsAction="ifRoom"
-		android:title="@string/action_add">
+		android:title="@string/action_add"
+		android:orderInCategory="100">
 		<menu>
 			<item android:id="@+id/action_add_fromurl" android:title="@string/action_addfromurl" />
 			<item android:id="@+id/action_add_fromfile" android:title="@string/action_addfromfile" />
@@ -14,33 +15,39 @@
 	<item
 		android:id="@+id/action_search"
 		android:icon="?attr/ic_action_search"
-		android:showAsAction="ifRoom"
-		android:title="@string/action_search"/>
+		android:showAsAction="collapseActionView|ifRoom"
+		android:title="@string/action_search"
+		android:orderInCategory="101"/>
 	<item
 		android:id="@+id/action_rss"
 		android:icon="?attr/ic_action_rss"
 		android:showAsAction="ifRoom"
-		android:title="@string/action_rss"/>
+		android:title="@string/action_rss"
+		android:orderInCategory="900"/>
 	<item
 		android:id="@+id/action_enableturtle"
 		android:icon="@drawable/ic_action_turtle_disabled"
 		android:showAsAction="ifRoom"
-		android:title="@string/action_enableturtle"/>
+		android:title="@string/action_enableturtle"
+		android:orderInCategory="901"/>
 	<item
 		android:id="@+id/action_disableturtle"
 		android:showAsAction="ifRoom"
 		android:icon="@drawable/ic_action_turtle_enabled"
-		android:title="@string/action_disableturtle"/>
+		android:title="@string/action_disableturtle"
+		android:orderInCategory="902"/>
 	<item
 		android:id="@+id/action_refresh"
 		android:icon="?attr/ic_action_refresh"
 		android:showAsAction="always"
-		android:title="@string/action_refresh"/>
+		android:title="@string/action_refresh"
+		android:orderInCategory="903"/>
 	<item
 		android:id="@+id/action_sort"
 		android:icon="?attr/ic_action_sort_by_size"
 		android:showAsAction="ifRoom"
-		android:title="@string/action_sort">
+		android:title="@string/action_sort"
+		android:orderInCategory="904">
 		<menu>
 			<item android:id="@+id/action_sort_byname" android:title="@string/action_sort_alpha" />
 			<item android:id="@+id/action_sort_status" android:title="@string/action_sort_status" />
@@ -53,14 +60,17 @@
 	<item
 		android:id="@+id/action_filter"
 		android:showAsAction="never"
-		android:title="@string/action_filter"/>
+		android:title="@string/action_filter"
+		android:orderInCategory="905"/>
 	<item
 		android:id="@+id/action_help"
 		android:showAsAction="always"
-		android:title="@string/action_help"/>
+		android:title="@string/action_help"
+		android:orderInCategory="906"/>
 	<item
 		android:id="@+id/action_settings"
 		android:showAsAction="always"
-		android:title="@string/action_settings"/>
+		android:title="@string/action_settings"
+		android:orderInCategory="907"/>
 
 </menu>
