--- a/core/res/layout/list_item_simple.xml
+++ b/core/res/layout/list_item_simple.xml
@@ -12,7 +12,6 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:textSize="@dimen/text_default"
-		android:textIsSelectable="false"
-		android:autoLink="web" />
+		android:textIsSelectable="false" />
 
 </FrameLayout>
