--- a/core/res/values/changelog.xml
+++ b/core/res/values/changelog.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <string name="system_changelog">
+Transdroid 2.0.0-alpha2\n
+- Fixed Transmission adapter folder setting\n
+- Fixed RSS feed screens\n
+- UI tweaks\n
+\n
 Transdroid 2.0.0-alpha1\n
 - Totally reworked Holo-style interface\n
 - Provide tablet interface on smaller tablets\n
