--- a/core/res/values/styles.xml
+++ b/core/res/values/styles.xml
@@ -82,4 +82,10 @@
 		<item name="android:paddingBottom">2dip</item>
 	</style>
 	
+	<style name="BigNumberButton" parent="android:Widget.Holo">
+		<item name="android:background">@drawable/selectable_background_transdroid</item>
+		<item name="android:padding">@dimen/margin_half</item>
+		<item name="android:textSize">60sp</item>
+	</style>
+	
 </resources>
